changes in tests and ct

--- a/WotPersonalDataCollectorWebApp/Views/Version/Index.cshtml
+++ b/WotPersonalDataCollectorWebApp/Views/Version/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@using VersionValidateViewModel = WotPersonalDataCollectorWebApp.Models.ViewModels.VersionValidateViewModel
+@model VersionValidateViewModel
+@{
 	ViewData["Title"] = "WPD - Versions";
 }
 <div class="container">
