--- a/WotPersonalDataCollectorWebApp/Views/Version/Index.cshtml
+++ b/WotPersonalDataCollectorWebApp/Views/Version/Index.cshtml
@@ -25,9 +25,11 @@
 								</div>
 							</div>
 						</div>
+						<form method="get" asp-action="RequestValidationProcess">
 						<div class="col-6">
-							<button class="btn btn-dark">Check Versions</button>
+							<input type="submit" class="btn btn-dark" value="check ver"/>
 						</div>
+						</form>
 					</div>
 				</div>
 			</div>
