--- a/WotPersonalDataCollectorWebApp/Views/Shared/_Layout.cshtml
+++ b/WotPersonalDataCollectorWebApp/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
 		                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
 	                </li>
 	                <li class="nav-item">
-		                <a class="nav-link text-dark" asp-area="" asp-controller="Version" asp-action="Index">Settings</a>
+		                <a class="nav-link text-dark" asp-area="" asp-controller="Version" asp-action="Index">Validate data</a>
 	                </li>
                 </ul>
                 <partial name="_LoginPartial"/>
