--- a/WotPersonalDataCollectorWebApp/Views/Version/Index.cshtml
+++ b/WotPersonalDataCollectorWebApp/Views/Version/Index.cshtml
@@ -14,31 +14,35 @@
 		<div class="col-2"></div>
 		<div class="col-8">
 			<div class="row text-center border-bottom border-2 border-dark mb-2">
-				<h4>Settings</h4>
+				<h4>Data validation center</h4>
 			</div>
 			<div class="row">
 				<div class="container">
 					<div class="row">
 						<div class="col-12">
 							<div class="container">
-								<div class="row">
+								<div class="row text-center mt-3">
 									<p>
 										<b>Validate Cosmos DB and ASP.NET dto versions</b>
 									</p>
 								</div>
 								<div class="row">
-									<small>Last data version check: XXX</small>
+									<small>Check if versions of dto in cosmos database matches version in ASP.NET. This process may take a while, but you can cancel it in any time</small>
 								</div>
-								<a class="btn btn-sm btn-success" asp-action="RequestValidationProcess">Validate data</a>
-								@if (Model.IsCancellationEnabled ?? false)
-								{
-									<a class="btn btn-sm btn-danger" asp-action="CancelValidationProcess">Cancel validation</a>
-								}
-								else
-								{
-									<a class="btn btn-sm btn-danger disabled" asp-action="CancelValidationProcess">Cancel validation</a>
-								}
-								<a class="btn btn-sm btn-info" asp-action="RequestValidationProcess">Check results</a>
+								<div class="row align-middle">
+									<a class="btn btn-sm btn-success m-1" asp-action="RequestValidationProcess">Validate data</a>
+									@if (Model.IsCancellationEnabled ?? false)
+									{
+										<a class="btn btn-sm btn-danger m-1" asp-action="CancelValidationProcess">Cancel validation</a>
+									}
+									else
+									{
+										<a class="btn btn-sm btn-danger disabled m-1" asp-action="CancelValidationProcess">Cancel validation</a>
+									}
+									<a class="btn btn-sm btn-info m-1" asp-action="ValidationResults">Check results</a>
+									<a class="btn btn-sm btn-info m-1" asp-action="LastValidationResult">View latest result</a>
+								</div>
+
 							</div>
 						</div>
 
