changes to view

--- a/WotPersonalDataCollectorWebApp/Views/Version/Index.cshtml
+++ b/WotPersonalDataCollectorWebApp/Views/Version/Index.cshtml
@@ -40,7 +40,7 @@
 										<a class="btn btn-sm btn-danger disabled m-1" asp-action="CancelValidationProcess">Cancel validation</a>
 									}
 									<a class="btn btn-sm btn-info m-1" asp-action="ValidationResults">Check results</a>
-									<a class="btn btn-sm btn-info m-1" asp-action="LastValidationResult">View latest result</a>
+									<a class="btn btn-sm btn-info m-1" asp-action="LatestValidationResult">View latest result</a>
 								</div>
 
 							</div>
