added resurces message

--- a/WotPersonalDataCollectorWebApp/Views/Version/Index.cshtml
+++ b/WotPersonalDataCollectorWebApp/Views/Version/Index.cshtml
@@ -41,6 +41,7 @@
 									}
 									<a class="btn btn-sm btn-info m-1" asp-action="ValidationResults">Check results</a>
 									<a class="btn btn-sm btn-info m-1" asp-action="LatestValidationResult">View latest result</a>
+									<a class="btn btn-sm btn-danger m-1" asp-action="DeleteValidationData">Delete all validation data</a>
 								</div>
 
 							</div>
